format stuff better on the dashboard

--- a/ethic/components/dashboard/dashboard.view.html
+++ b/ethic/components/dashboard/dashboard.view.html
@@ -32,7 +32,7 @@
         <!-- /.panel-heading -->
         <div class="panel-body">
           <h5>You owe:  {{ user.amount_owed }} </h5>
-          <h5>Time left:  {{ user.time_left_to_pay }} </h5>
+          <h5>Time left:  {{ user.time_left_to_pay }} days</h5>
           <br>
           <button type="button" class="btn btn-success" onclick= "location.href='payment_view.html'">Pay now</button>
         </div>
