--- a/ethic/components/dashboard/dashboard.view.html
+++ b/ethic/components/dashboard/dashboard.view.html
@@ -18,7 +18,7 @@
             <li ng-repeat = "policy in user.member_policies"> {{policy.model}} - {{policy.date}} </li>
           </ul>
           <br>
-          <input type="button" class="btn btn-primary" value="Register policy" ng-click="go('/register_policy')">
+          <input type="button" class="btn btn-primary" value="Register policy" ng-click="go('/register-policy')">
         </div>
       </div>
     </div>
