--- a/ethic/components/policies/register.view.html
+++ b/ethic/components/policies/register.view.html
@@ -4,9 +4,22 @@
       <h1>Create a policy</h1>
       <form class="form-horizontal">
         <div class="form-group">
-          <label for="car_model" class="col-sm-3">Car model</label>
+          <label for="car_make" class="col-sm-3">Car make</label>
           <div class="col-sm-9">
-            <input type="text" class="form-control" id="car_model" ng-model="policy.car_model">
+            <select id="car_make" ng-model="policy.car_make" ng-change="onCarMakeChange()" class="form-control"
+                    ng-options="opt.make_id as opt.make_display for opt in carMakesOptions">
+            </select>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="car_model" class="col-sm-3">Car model</label>
+          <div class="col-sm-9" ng-show="showCarModelInput">
+            <select id="car_model" ng-model="policy.car_model" class="form-control"
+                    ng-options="opt.model_name for opt in carModelsOptions">
+            </select>
+          </div>
+          <div class="col-sm-9" ng-hide="showCarModelInput">
+            <input class="form-control" type="text" disabled="disabled" placeholder="Search car models">
           </div>
         </div>
         <div class="form-group">
