item menu is "Register a policy"

--- a/ethic/views/main.layout.html
+++ b/ethic/views/main.layout.html
@@ -10,7 +10,7 @@
         <a href="#">Dashboard</a>
       </li>
       <li>
-        <a href="#policies/register">Policies</a>
+        <a href="#policies/register">Register a policy</a>
       </li>
       <li>
         <a href="#claims">Claims</a>
