--- a/ethic/views/policies/register.view.html
+++ b/ethic/views/policies/register.view.html
@@ -1,4 +1,44 @@
 <div>
   <h1>Register a policy</h1>
-  <p>yo</p>
+  <div class="row">
+    <div class="col-md-offset-3 col-md-6">
+      <form class="form form-horizontal">
+        <div class="form-group">
+          <label for="car-year" class="col-sm-4">Car year</label>
+          <div class="col-sm-4">
+            <input type="number" id="car-year" min="1950" class="form-control" name="car_year">
+          </div>
+        </div>
+         <div class="form-group">
+          <label for="car-make" class="col-sm-4">Car make</label>
+          <div class="col-sm-4">
+            <select id="car-make" class="form-control" name="car_make"></select>
+          </div>
+        </div>
+         <div class="form-group">
+          <label for="car-model" class="col-sm-4">Car model</label>
+          <div class="col-sm-4">
+            <select type="number" id="car-model" disabled="disabled" class="form-control" name="car_model"></select>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="initial-premium" class="col-sm-4">Initial premium (month)</label>
+          <div class="col-sm-4">
+            <input type="number" class="form-control" id="initial-premium" name="initial_premium">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="initial-deductible" class="col-sm-4">Initial deductible</label>
+          <div class="col-sm-4">
+            <input type="number" class="form-control" id="initial-deductible" name="initial_deductible">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-4 col-sm-offset-2 text-center">
+            <button type="submit" class="btn btn-success js-submit">Submit</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
