use FileClaimView instead of ClaimsListView

--- a/ethic/views/main.layout.html
+++ b/ethic/views/main.layout.html
@@ -13,7 +13,7 @@
         <a href="#policies/register">Register a policy</a>
       </li>
       <li>
-        <a href="#claims">Claims</a>
+        <a href="#claims/file">File a claim</a>
       </li>
       <li>
         <a href="#payment">Make a payment</a>
