HomeView is in fact a Layout

--- a/ethic/views/home/home.view.html
+++ b/ethic/views/home/home.view.html
@@ -1,4 +1,17 @@
 <div>
   <h1>My dashboard</h1>
-  <p>The home view</p>
+
+  <div class="row">
+    <div class="col-md-12">
+      <h2>My policies</h2>
+      <div class="policy-list"></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <h2>My previous claims</h2>
+      <div class="claim-list"></div>
+    </div>
+  </div>
 </div>
