--- a/ethic/views/policies/item.view.html
+++ b/ethic/views/policies/item.view.html
@@ -1,3 +1,14 @@
 <li>
-  one policy
+  <div class="panel panel-default">
+    <div class="panel-heading">
+     Policy <%= id %>
+    </div>
+    <div class="panel-body">
+      <p><strong>Registered date: </strong><%= registered_date %></p>
+      <p><strong>Car year: </strong> <%= car_year %></p>
+      <p><strong>Car make: </strong> <%= car_make %></p>
+      <p><strong>Car model: </strong> <%= car_model %></p>
+      <p><strong>State: </strong> <%= state %></p>
+    </div>
+  </div>
 </li>
