--- a/ethic/views/main.layout.html
+++ b/ethic/views/main.layout.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="col-md-3 sidebar-wrapper" id="menu">
+  <div class="affix col-md-3 sidebar-wrapper" id="menu">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
         <a href="#">
@@ -27,7 +27,7 @@
     </ul>
   </div>
 
-  <div class="col-md-9 page-content-wrapper">
+  <div class="col-md-offset-3 col-md-9 page-content-wrapper">
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-12" id="content"></div>
