--- a/ethic/views/policies/empty.view.html
+++ b/ethic/views/policies/empty.view.html
@@ -1,3 +1,3 @@
 <li>
-  You don't have any policy yet.
+  You don't have any policy yet. Register a new one <a href="#policies/register">here</a>
 </li>
