--- a/ethic/views/main.layout.html
+++ b/ethic/views/main.layout.html
@@ -1,31 +1,5 @@
 <div>
-  <div class="affix col-md-3 sidebar-wrapper" id="menu">
-    <ul class="sidebar-nav">
-      <li class="sidebar-brand">
-        <a href="#">
-          Ethic
-        </a>
-      </li>
-      <li>
-        <a href="#">Dashboard</a>
-      </li>
-      <li>
-        <a href="#policies/register">Register a policy</a>
-      </li>
-      <li>
-        <a href="#claims/file">File a claim</a>
-      </li>
-      <li>
-        <a href="#payment">Make a payment</a>
-      </li>
-      <li>
-        <a href="#faq">FAQ</a>
-      </li>
-      <li>
-        <a href="#tos">Rules &amp; Terms</a>
-      </li>
-    </ul>
-  </div>
+  <div class="affix col-md-3 sidebar-wrapper" id="menu"></div>
 
   <div class="col-md-offset-3 col-md-9 page-content-wrapper">
     <div class="container-fluid">
