--- a/ethic/views/policies/register.view.html
+++ b/ethic/views/policies/register.view.html
@@ -8,30 +8,35 @@
           <div class="col-sm-4">
             <input type="number" id="car-year" min="1950" class="form-control" name="car_year">
           </div>
+          <p class="form-error-msg text-danger"></p>
         </div>
         <div class="form-group">
           <label for="car-make" class="col-sm-4">Car make</label>
           <div class="col-sm-4">
             <select id="car-make" class="form-control" name="car_make"></select>
           </div>
+          <p class="form-error-msg text-danger"></p>
         </div>
         <div class="form-group">
           <label for="car-model" class="col-sm-4">Car model</label>
           <div class="col-sm-4">
             <select type="number" id="car-model" disabled="disabled" class="form-control" name="car_model"></select>
           </div>
+          <p class="form-error-msg text-danger"></p>
         </div>
         <div class="form-group">
           <label for="initial-premium" class="col-sm-4">Initial premium (month)</label>
           <div class="col-sm-4">
             <input type="number" class="form-control" id="initial-premium" name="initial_premium">
           </div>
+          <p class="form-error-msg text-danger"></p>
         </div>
         <div class="form-group">
           <label for="initial-deductible" class="col-sm-4">Initial deductible</label>
           <div class="col-sm-4">
             <input type="number" class="form-control" id="initial-deductible" name="initial_deductible">
           </div>
+          <p class="form-error-msg text-danger"></p>
         </div>
         <div class="form-group">
           <div class="col-sm-4 col-sm-offset-2 text-center">
