--- a/ethic/views/policies/register.view.html
+++ b/ethic/views/policies/register.view.html
@@ -6,7 +6,7 @@
         <div class="form-group">
           <label for="car-year" class="col-sm-4">Car year</label>
           <div class="col-sm-4">
-            <input type="number" id="car-year" min="1950" class="form-control" name="car_year">
+            <input type="number" id="car-year" min="1950" class="form-control" name="car_year" placeholder="2015">
           </div>
           <p class="form-error-msg text-danger"></p>
         </div>
@@ -27,14 +27,14 @@
         <div class="form-group">
           <label for="initial-premium" class="col-sm-4">Initial premium (month)</label>
           <div class="col-sm-4">
-            <input type="number" class="form-control" id="initial-premium" name="initial_premium">
+            <input type="number" class="form-control" id="initial-premium" name="initial_premium" placeholder="49.99">
           </div>
           <p class="form-error-msg text-danger"></p>
         </div>
         <div class="form-group">
           <label for="initial-deductible" class="col-sm-4">Initial deductible</label>
           <div class="col-sm-4">
-            <input type="number" class="form-control" id="initial-deductible" name="initial_deductible">
+            <input type="number" class="form-control" id="initial-deductible" name="initial_deductible" placeholder="500">
           </div>
           <p class="form-error-msg text-danger"></p>
         </div>
