--- a/ethic/views/claims/file.view.html
+++ b/ethic/views/claims/file.view.html
@@ -6,15 +6,17 @@
         <div class="form-group">
           <label for="amount" class="col-sm-4">Amount</label>
           <div class="col-sm-4">
-            <input type="number" id="amount" class="form-control" name="amount" placeholder="250.35">
+            <div class="input-group">
+              <input type="number" id="amount" class="form-control" name="amount" placeholder="250.35">
+               <div class="input-group-addon">$</div>
+            </div>
           </div>
           <p class="form-error-msg text-danger"></p>
         </div>
         <div class="form-group">
           <label for="reason" class="col-sm-4">Reason</label>
           <div class="col-sm-6">
-            <textarea id="reason" class="form-control" name="reason" rows="8">Please
-            explain the reason of your claim (minimum 100 characters).
+            <textarea id="reason" class="form-control" name="reason" rows="8">Please explain the reason of your claim (minimum 100 characters).
             </textarea>
           </div>
           <p class="form-error-msg text-danger"></p>
