--- a/ethic/views/policies/register.view.html
+++ b/ethic/views/policies/register.view.html
@@ -27,14 +27,20 @@
         <div class="form-group">
           <label for="initial-premium" class="col-sm-4">Initial premium (month)</label>
           <div class="col-sm-4">
-            <input type="number" class="form-control" id="initial-premium" name="initial_premium" placeholder="49.99">
+            <div class="input-group">
+              <input type="number" class="form-control" id="initial-premium" name="initial_premium" placeholder="49.99">
+              <div class="input-group-addon">$</div>
+            </div>
           </div>
           <p class="form-error-msg text-danger"></p>
         </div>
         <div class="form-group">
           <label for="initial-deductible" class="col-sm-4">Initial deductible</label>
           <div class="col-sm-4">
-            <input type="number" class="form-control" id="initial-deductible" name="initial_deductible" placeholder="500">
+            <div class="input-group">
+              <input type="number" class="form-control" id="initial-deductible" name="initial_deductible" placeholder="500">
+              <div class="input-group-addon">$</div>
+            </div>
           </div>
           <p class="form-error-msg text-danger"></p>
         </div>
