--- a/ethic/views/claims/file.view.html
+++ b/ethic/views/claims/file.view.html
@@ -2,13 +2,26 @@
   <h1>File a claim</h1>
   <div class="row">
     <div class="col-md-offset-3 col-md-6">
+      <% if (policies.length > 0) { %>
       <form class="form form-horizontal">
+        <div class="form-group">
+          <label for="policy-id" class="col-sm-4">Policy</label>
+          <div class="col-sm-6">
+            <select id="policy-id" class="form-control" name="policy_id">
+              <option val="">Choose a policy</option>
+              <% _.each(policies, function (policy) { %>
+              <option val="<%=policy%>"><%=policy%></option>
+              <% }) %>
+            </select>
+          </div>
+          <p class="form-error-msg text-danger"></p>
+        </div>
         <div class="form-group">
           <label for="amount" class="col-sm-4">Amount</label>
           <div class="col-sm-4">
             <div class="input-group">
               <input type="number" id="amount" class="form-control" name="amount" placeholder="250.35">
-               <div class="input-group-addon">$</div>
+              <div class="input-group-addon">$</div>
             </div>
           </div>
           <p class="form-error-msg text-danger"></p>
@@ -27,6 +40,12 @@
           </div>
         </div>
       </form>
+      <% } else { %>
+      <p>
+        You don't have any policy yet. Before filing a claim,
+        you need to register a new one <a href="#policies/register">here</a>
+      </p>
+      <% } %>
     </div>
   </div>
 </div>
