registered_date -> registered_at

--- a/ethic/views/policies/item.view.html
+++ b/ethic/views/policies/item.view.html
@@ -4,7 +4,7 @@
      Policy <%= id %>
     </div>
     <div class="panel-body">
-      <p><strong>Registered date: </strong><%= registered_date %></p>
+      <p><strong>Registered date: </strong><%= registered_at %></p>
       <p><strong>Car year: </strong> <%= car_year %></p>
       <p><strong>Car make: </strong> <%= car_make %></p>
       <p><strong>Car model: </strong> <%= car_model %></p>
