filing_date -> filed_at

--- a/ethic/views/claims/item.view.html
+++ b/ethic/views/claims/item.view.html
@@ -1,7 +1,7 @@
 <li>
   <div class="panel panel-default">
     <div class="panel-heading">
-      Claim for policy <%= policy_id %> (<%= filing_date %>),
+      Claim for policy <%= policy_id %> (<%= filed_at %>),
       <strong>
       <% if (awarded) { %>
       awarded
