--- a/ethic/views/policies/register/step-0.view.html
+++ b/ethic/views/policies/register/step-0.view.html
@@ -1,7 +1,18 @@
 <div>
   <div class="row">
     <div class="col-md-offset-3 col-md-6 text-center">
-      STEP 0
+      <div>
+        <p>Register a policy and start saving money now</p>
+      </div>
+      <div>
+        <button class="btn btn-success js-start-register">I'm in</button>
+      </div>
+      <div>
+        <a class="js-need-help">How does it work</a>
+      </div>
+      <div class="js-help hide">
+        <p>This is some help blah blah bla.</p>
+      </div>
     </div>
   </div>
 </div>
