--- a/ethic/views/policies/register/step.layout.html
+++ b/ethic/views/policies/register/step.layout.html
@@ -1,4 +1,4 @@
 <div>
-  <div class="register-progress"></div>
-  <div class="register-step-content"></div>
+  <div class="register-policy-progress"></div>
+  <div class="register-policy-step-content"></div>
 </div>
