--- a/ethic/views/policies/register/step-1.view.html
+++ b/ethic/views/policies/register/step-1.view.html
@@ -1,7 +1,17 @@
 <div>
   <div class="row">
-    <div class="col-md-offset-3 col-md-6 text-center">
-      STEP 1
+    <div class="col-md-offset-2 col-md-8 text-center">
+      <form class="register-policy-form-inline">
+        <div class="form-step">I own a car,</div>
+        <div class="form-step inline-block">The make is <input type='text' name='car_make' class='js-input'/>,</div>
+        <div class="form-step inline-block">and the model is <input type='text' name='car_model' class='js-input'/></div>
+        <div class="form-step">It was manufactured in <input type='text' name='car_year' class='js-input'/></div>
+        <div class="form-step">The VIN number is <input type='text' name='car_vin_number' class='js-input'></div>
+        <div class="form-step">My insurance policy is underwritten by <input type='text' name='insurance' class='js-input'/></div>
+        <div class="form-step">My current deductible is $<input type='text' name='initial_deductible' class='js-input'/></div>
+        <div class="form-step">and my monthly premium is $<input type='text' name='initial_premium' class='js-input'/></div>
+        <button class='btn btn-success js-submit'>Go on</button>
+      </form>
     </div>
   </div>
 </div>
