--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,3 +5,19 @@ html, body, #ethic-app {
 .register-policy-step-content {
   margin-top: 20%;
 }
+
+.register-policy-form-inline input {
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 2px solid #AAAAAA;
+}
+
+.register-policy-form-inline input:focus {
+  outline: none;
+  border-bottom: 2px solid #0074D9;
+}
+
+.inline-block {
+  display: inline-block;
+}
