inline0 uses select2

--- a/ethic/views/policies/register/step1-form-inlines/inline0.view.html
+++ b/ethic/views/policies/register/step1-form-inlines/inline0.view.html
@@ -1,3 +1,3 @@
-<div class="js-form-step inline-block" style="display:none;">
-  The make is <input type='text' name='car_make' class='js-input'/>,
+<div>
+  The make is <select name='car_make' class='js-input'></select>,
 </div>
