--- a/ethic/views/policies/register/step1-form-inlines/inline2.view.html
+++ b/ethic/views/policies/register/step1-form-inlines/inline2.view.html
@@ -1,3 +1,3 @@
-<div class="js-form-step" style="display:none;">
+<div>
   It was manufactured in <input type='text' name='car_year' class='js-input'/>
 </div>
