--- a/ethic/views/policies/register/step1-form-inlines/inline3.view.html
+++ b/ethic/views/policies/register/step1-form-inlines/inline3.view.html
@@ -1,3 +1,3 @@
-<div class="js-form-step" style="display:none;">
+<div>
   The VIN number is <input type='text' name='car_vin_number' class='js-input'>
 </div>
