--- a/ethic/views/policies/register/step1-form-inlines/inline5.view.html
+++ b/ethic/views/policies/register/step1-form-inlines/inline5.view.html
@@ -1,3 +1,3 @@
-<div class="js-form-step" style="display:none;">
+<div>
   My current deductible is $<input type='text' name='initial_deductible' class='js-input'/>
 </div>
