--- a/ethic/views/policies/register/step1-form-inlines/inline6.view.html
+++ b/ethic/views/policies/register/step1-form-inlines/inline6.view.html
@@ -1,3 +1,3 @@
-<div class="js-form-step" style="display:none;">
+<div>
   and my monthly premium is $<input type='text' name='initial_premium' class='js-input'/>
 </div>
