Inline1 view, that works with Inline0

--- a/ethic/views/policies/register/step1-form-inlines/inline1.view.html
+++ b/ethic/views/policies/register/step1-form-inlines/inline1.view.html
@@ -1,3 +1,3 @@
 <div>
-  and the model is <input type='text' name='car_model' class='js-input'/>
+  and the model is <select name='car_model' class='js-input'></select>
 </div>
