--- a/ethic/views/policies/register/step1-form-inlines/inline4.view.html
+++ b/ethic/views/policies/register/step1-form-inlines/inline4.view.html
@@ -1,3 +1,3 @@
 <div>
-  My insurance policy is underwritten by <input type='text' name='insurance' class='js-input'/>
+  My insurance policy is underwritten by <select name='insurance_provider' class='js-input'></select>
 </div>
