--- a/ethic/views/policies/register/step1-form-inlines/inline5.view.html
+++ b/ethic/views/policies/register/step1-form-inlines/inline5.view.html
@@ -1,3 +1,3 @@
 <div>
-  My current deductible is $<input type='text' name='initial_deductible' class='js-input'/>
+  My current deductible is $<input type='number' min="100" max="2500" step="10" name='initial_deductible' class='js-input'/>
 </div>
