--- a/ethic/views/policies/register/step1-form-inlines/inline6.view.html
+++ b/ethic/views/policies/register/step1-form-inlines/inline6.view.html
@@ -1,3 +1,3 @@
 <div>
-  and my monthly premium is $<input type='text' name='initial_premium' class='js-input'/>
+  and my <select name='premium_period'></select> premium is $<input type='text' name='initial_premium' class='js-input'/>
 </div>
