first draft of error handling for step 1 form

--- a/ethic/views/policies/register/step-1.view.html
+++ b/ethic/views/policies/register/step-1.view.html
@@ -4,7 +4,9 @@
       <form class="register-policy-form-inline">
         <div class="js-form-step">I own a car,</div>
         <div class="form-step-container"></div>
-        <div class="form-error-container"></div>
+        <div class="form-error-container text-danger">
+          <ul class="form-error-list"></ul>
+        </div>
         <div class="js-submit-container" style="display:none;">
           <button class='btn btn-success js-submit'>Go on</button>
         </div>
