car_vin_number -> car_vin

--- a/ethic/views/policies/register/step1-form-inlines/inline3.view.html
+++ b/ethic/views/policies/register/step1-form-inlines/inline3.view.html
@@ -1,3 +1,3 @@
 <div>
-  The VIN number is <input type='text' name='car_vin_number' class='js-input'>
+  The VIN number is <input type='text' name='car_vin' class='js-input'>
 </div>
