step2 : uploading proof of insurance

--- a/ethic/views/policies/register/step-2.view.html
+++ b/ethic/views/policies/register/step-2.view.html
@@ -1,7 +1,12 @@
 <div>
   <div class="row">
     <div class="col-md-offset-3 col-md-6 text-center">
-      STEP 2
+      <div><p>Please upload a proof of insurance</p></div>
+      <form class="js-file-upload-container dropzone"></form>
+      <div><button type="btn" class="btn btn-link js-explanation-link">Why do we need that ?</button></div>
+      <div class="js-explanation" style="display: none;">
+        Blah blah blah
+      </div>
     </div>
   </div>
 </div>
