--- a/ethic/views/auth/login.view.html
+++ b/ethic/views/auth/login.view.html
@@ -1,1 +1,22 @@
-<p>Login view</p>
+<div>
+  <h1>Login to Ethic</h1>
+  <form class="form-horizontal">
+    <div class="form-group">
+      <label for="login-email" class="col-sm-2 control-label">Email</label>
+      <div class="col-sm-10">
+        <input type="email" class="form-control" id="login-email" placeholder="Email">
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="login-password" class="col-sm-2 control-label">Password</label>
+      <div class="col-sm-10">
+        <input type="password" class="form-control" id="login-password" placeholder="Password">
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <button type="button" class="btn btn-default" id="login-submit">Sign in</button>
+      </div>
+    </div>
+  </form>
+</div>
