fix display of policy

--- a/ethic/views/policies/item.view.html
+++ b/ethic/views/policies/item.view.html
@@ -1,14 +1,12 @@
 <li>
   <div class="panel panel-default">
     <div class="panel-heading">
-     Policy <%= id %>
+     Policy <i><%= contractType %>-<%= id %></i>
     </div>
     <div class="panel-body">
-      <p><strong>Registered date: </strong><%= registered_at %></p>
       <p><strong>Car year: </strong> <%= car_year %></p>
       <p><strong>Car make: </strong> <%= car_make %></p>
       <p><strong>Car model: </strong> <%= car_model %></p>
-      <p><strong>State: </strong> <%= state %></p>
     </div>
   </div>
 </li>
