--- a/ethic/views/policies/register/step-4.view.html
+++ b/ethic/views/policies/register/step-4.view.html
@@ -1,7 +1,10 @@
 <div>
   <div class="row">
     <div class="col-md-offset-3 col-md-6 text-center">
-      STEP 4
+      <p>Great to have you!</p>
+      <p>Since your carrier is <i><%= provider %></i>, you can <span class="text-call-carrier text-info">call</span> them now</p>
+      <p>and raise your deductible to <i>$<%= maxDeductible %></i> to start saving.</p>
+      <a class="btn btn-success btn-submit" href="#">Got it!</a>
     </div>
   </div>
 </div>
