--- a/ethic/views/policies/register/progress.view.html
+++ b/ethic/views/policies/register/progress.view.html
@@ -1,1 +1,5 @@
-<p>PROGRESS</p>
+<div>
+  <span class="progress-step active" data-step="1">1</span>
+  <span class="progress-step" data-step="2">2</span>
+  <span class="progress-step" data-step="3">3</span>
+</div>
