--- a/ethic/views/policies/register/progress.view.html
+++ b/ethic/views/policies/register/progress.view.html
@@ -1,5 +1,11 @@
-<div>
-  <span class="progress-step active" data-step="1">1</span>
-  <span class="progress-step" data-step="2">2</span>
-  <span class="progress-step" data-step="3">3</span>
+<div class="row">
+  <div class="col-md-offset-3 col-md-2">
+    <span class="progress-step active" data-step="1">1</span>
+  </div>
+  <div class="col-md-2">
+    <span class="progress-step" data-step="2">2</span>
+  </div>
+  <div class="col-md-2">
+    <span class="progress-step" data-step="3">3</span>
+  </div>
 </div>
